<resources>
    <string name="app_name">uni</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="vaccination">Vaccination</string>
    <string name="feed">Feed</string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="Other">Other</string>
    <string name="hi_bella">Hi, bella</string>
    <string name="hi">Hi</string>
    <string name="search">Search</string>
    <string name="how_can_we_assist_you">How can we assist you?</string>
    <string name="dog_image">Dog Image</string>
    <string name="todo">TODO</string>
    <string name="grooming_services">Grooming Services</string>
    <string name="MedicalServices">Medical Services</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="menu">menu</string>
    <string name="confirm_pass">Confirm Passwor</string>
    <string name="confirm_pas">Confirm Password</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="support_about"><![CDATA[Support & About]]></string>
    <string name="security">Security</string>
    <string name="log_out">Log Out</string>
    <string name="actions">Actions</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="back_button">Back Button</string>
    <string name="pass">Password</string>
    <string name="Trimming" />
    <string name="T">Trimming</string>
    <string name="Cleaning">Cleaning</string>
    <string name="Ceckup">Checkup</string>
    <string name="Checkup">CheckUp</string>
    <string name="Check">Checkup</string>
    <string name="Tr">Trimming \nCost: 500 php</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="UniVet">UniVet</string>
    <string name="Admin">I\'m a Admin.</string>
    <string name="manager">I\'m a Manager.</string>
    <string name="costumer">I\'m a costumer.</string>
    <string name="guest">Guest</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="or">- OR -</string>
    <string name="log">Login</string>
    <string name="i_accept_privacy_policy_amp_term_of_use"><![CDATA[I accept Privacy Policy & Term of Use]]></string>
    <string name="show_password">Show Password</string>
    <string name="passw">Password</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="to">TODO</string>
    <string name="manager_login">Manager Login</string>
    <string name="pending_appointments">Pending \nAppointments</string>
    <string name="upcoming_appointments2">Upcoming \nAppointments</string>
    <string name="upcoming_appointment">Upcoming \nAppointments</string>
    <string name="pending_appointment">Pending \nAppointments</string>
    <string name="getstartedimage">getStartedImage</string>
    <string name="division">division</string>
    <string name="line">line</string>
    <string name="delivery_to">Delivery to</string>
    <string name="your_favorite_meals">Your Favorite Meals,</string>
    <string name="your_doorstep">Your Doorstep</string>
    <string name="discover_delicious_meals_fast_delivery_and_nexclusive_all_in_one_app">Discover delicious meals, fast delivery, and \nexclusive—all in one app.</string>
    <string name="swipe_to_confirm">Swipe to Confirm</string>
    <string name="Calayo">Calayo</string>
    <string name="already_have_an">Verify your Gmail to secure your\naccount. Check your inbox for the code.</string>
    <string name="log_in"><u>Resend Code</u></string>
    <string name="otp_verification">Create Your Food Delivery</string>
    <string name="hurry_offer_end_soon">Get 40% off\nYour First Order!</string>
    <string name="cook"><![CDATA[Cook & steam up]]></string>
</resources>